add logout logic
