# docs/swagger.json
@@ -11,9 +11,6 @@
         "/session": {
             "post": {
                 "description": "create session in db with ip and user agent.",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -55,6 +52,42 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/handlers.errTokenIssuanceResp"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "check access and refresh tokens.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "logout",
+                "operationId": "delete-session",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.TokenResponse"
+                        },
+                        "headers": {
+                            "Set-Cookie": {
+                                "type": "string",
+                                "description": "JWT refreshToken Example: refreshToken=; Path=/; Max-Age=2628000; HttpOnly; Secure; SameSite=None"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errAuthResp"
                         }
                     }
                 }
@@ -100,9 +133,6 @@
                     }
                 ],
                 "description": "check access and refresh tokens.",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -114,7 +144,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Refersh token cooliee",
+                        "description": "Refersh token cookie",
                         "name": "Cookie",
                         "in": "header",
                         "required": true
@@ -136,7 +166,7 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/handlers.errEmptyAuthHeaderResp"
+                            "$ref": "#/definitions/handlers.errAuthResp"
                         }
                     },
                     "500": {
@@ -192,19 +222,6 @@
                 "message": {
                     "type": "string",
                     "example": "create session: error: uncorrect uuid"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": false
-                }
-            }
-        },
-        "handlers.errEmptyAuthHeaderResp": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "error empty auth header"
                 },
                 "success": {
                     "type": "boolean",
